feat: implement containerization, add system metrics parsing utilities, and configure backend CORS and SSH services